plivo api integrated

--- a/smartmedi/api/pom.xml
+++ b/smartmedi/api/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>api</artifactId>
 
+
     <dependencies>
         <dependency>
             <groupId>smartmedi</groupId>
@@ -70,6 +71,21 @@
         </dependency>
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+
+                <configuration>
+                    <mainClass>SmartMediApi</mainClass>
+                </configuration>
+            </plugin>
+
+
+        </plugins>
+    </build>
 
 
 </project>
