--- a/smartmedi/pom.xml
+++ b/smartmedi/pom.xml
@@ -12,4 +12,20 @@
         <module>api</module>
         <module>connector</module>
     </modules>
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
